--- a/style.css
+++ b/style.css
@@ -202,7 +202,41 @@ grid-template-areas:
 
     }
 
-    
+  .elementosCabecera {
+        display: flex;
+        grid-area: header;
+        height: 400px;
+        width: 300px;
+        flex-direction: column;
+        justify-content: center, space-evenly;
+    }
+
+    #barraNav {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+
+    }
+
+    #barraNav li a{
+   display: flex;
+    flex-direction: column;
+        text-align: center;
+        padding: 8px 7px 8px 7px;
+        border: none;
+    }
+
+    #barraNav li a:hover{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: 8px 7px 8px 7px;
+        background-color:  #ccc;
+    }
+
 
     .aboutMe {
         width: 300px;
