--- a/style.css
+++ b/style.css
@@ -142,14 +142,15 @@ list-style: none;
 .contactoGral {
     grid-area: footer;
     display: flex;
-    align-items: flex-end;
     padding-left: 10px;
 }
 
 .contactoGral p {
     font-family: "Basquerville", "arial";
     color:  blanchedalmond;
-    font-size: 25px;
+    font-size: 20px;
+margin-left: 800px;
+
 
 }    
 
@@ -311,7 +312,7 @@ grid-area: main;
         display: grid;
         grid-template-rows: repeat(2, 1fr);
         width: 320px;
-        height: 100px;
+        height: 40px;
         grid-template-areas: 
         "redesicons"
         "contactoGral"
@@ -346,13 +347,15 @@ justify-content: center;
       .contactoGral p {
         font-family: "Basquerville", "arial";
         color:  blanchedalmond;
-        font-size: 15px;
+        font-size: 10px;
+        margin-left: 50px;
+
       }
 
 
     .aboutMe {
-        width: 300px;
-        height: 900px;
+        width: 320px;
+        height: 420px;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
@@ -362,18 +365,18 @@ justify-content: center;
     }
     .asideIzq {
         grid-area: asideIzq;
-        width: 300px;
-        height: 300;
+        width: 320px;
+        height: 200;
         display: flex;
         flex-direction: column;
         align-content: center;    
 }
 .aboutStory {
-    width: 300px;
+    width: 320px;
     height: 75px;
 }
 .aboutStory h1 {
-    font-size: 15px;
+    font-size: 10px;
 }
 
 .aboutparrafo {
@@ -382,12 +385,12 @@ justify-content: center;
 }
 
 .aboutparrafo p {
-    font-size: 20px; 
+    font-size: 18px; 
 
 }
 
 .asideDer {
-    width: 300px;
+    width: 320px;
     display: grid;
     grid-area: asideDer;
     grid-template-columns: 1rf;
@@ -405,8 +408,33 @@ justify-content: center;
    height: 100px;
 
 }
+.bancoImg:nth-of-type(1){
+    grid-row: 1/2;
+    grid-area: img;
+
 }
 
+.bancoImg:nth-of-type(2){
+    grid-row: 2/3;
+    grid-area: img;
+}
+
+.bancoImg:nth-of-type(3){
+    grid-row: 3/4;
+    grid-area: img;
+}
+
+.bancoImg:nth-of-type(4){
+    grid-row: 4/5;
+    grid-area: img;
+
+}
+
+.aboutMe img {
+    margin-right:0px;
+   width: 210px;
+   height: 100px; }
+}
 /* fin mobile */
 
  .asideIzq {
