--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     background-image: url("./images/BG\ 01.jpg");
    font-family: "Basquerville", "arial";
    font-style: bold;
-   overflow: scroll;
 display: grid;
 grid-template-areas: 
 "header header header"
@@ -15,7 +14,6 @@ grid-template-areas:
 header {
     grid-area: header;
 }
-
 
 .elementosCabecera {
     display: flex;
@@ -90,6 +88,7 @@ height: 435px;
 .fotoPrincipal img{
 width: 1280px;
 height: 445px;
+margin-left: 0px;
 
 }
 
@@ -98,11 +97,18 @@ height: 445px;
    font-style: bold;
    font-size: 50px;
    color: blanchedalmond;
-   position: absolute;
+ position: absolute;
 }
- 
-.design {
-    margin-inline: 300px;
+
+.tituloImagenPrincipal h1 {
+    margin-left: 0px;
+    margin-right: 120px;
+}
+
+.design h1{
+    margin-top: 5px;
+    margin-inline: 200px;
+
 }   
 
 footer {
@@ -218,224 +224,6 @@ grid-template-areas:
 
 } 
 
-/* inicio  mobile */
-
-@media screen and (max-width: 600px) {
-
-    #bodycompleto{ 
-        width: 320px;
-        height: 480px;
-        display: grid;
-        grid-template-rows: 1fr 2fr 1fr;
-        grid-template-areas: 
-"header"
-"main"
-"footer"
-
-    }
-
-    #backgroundMobileOnly {
-        background-image: url("./images/averie-woodard-5d20kdvFCfA-unsplash.jpg");
-   background-size: cover;
-   z-index: 2;
-
-    }
-
-  .elementosCabecera {
-        display: flex;
-        grid-area: header;
-        height: 400px;
-        width: 300px;
-        flex-direction: column;
-        justify-content: center, space-evenly;
-    }
-
-    .divlogo img{ 
-        width: 60px;
-        height: 42px;
-        margin-left: 0px;
-        margin-top: 5px;
-       display: flex;
-        grid-area: header;
-        justify-content: flex-start;
-
-    }
-
-    #barraNav {
-        padding-top: 5px;
-        padding-bottom: 5px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-    }
-
-    #barraNav li a{
-   display: flex;
-    flex-direction: column;
-        text-align: center;
-        padding: 8px 7px 8px 7px;
-        border: none;
-    }
-
-    #barraNav li a:hover{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        padding: 8px 7px 8px 7px;
-        background-color:  #ccc;
-        border-radius: 5px;
-        color: black;
-    }
-main {
-grid-area: main;
- width: 300px;
- height: 470px;
-}
-
-.fotoPrincipal img{
-    width: 100%;
-}
-    .tituloImagenPrincipal {
-       font-size: 15px;
-       position: absolute;
-       margin-inline-start: 80px;
-    }
-     
-    .design {
-        margin-inline: 100px;
-    }   
-
-    /* footer mobile*/
-
-    footer {
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
-        width: 320px;
-        height: 40px;
-        grid-template-areas: 
-        "redesicons"
-        "contactoGral"
-        }
-
-      .footerElementos{
-        display: flex;
-        flex-direction: column;
-        justify-content: center,space-around;
-      }
-
-      .redesicons {
-      grid-area: footer;
-display: flex;
-justify-content: center;
-
-      }
-      .redesicons a img {
-        width: 30px;
-        height: 30px;
-        margin: 3px;
-        border-radius: 10px;
-        list-style: none;
-      }
-
-      .contactoGral{
-        grid-area: footer;  
-        display: flex;
-        justify-content: center;
-      }
-      
-      .contactoGral p {
-        font-family: "Basquerville", "arial";
-        color:  blanchedalmond;
-        font-size: 10px;
-        margin-left: 50px;
-
-      }
-
-
-    .aboutMe {
-        width: 320px;
-        height: 420px;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas: 
-        "asideIzq"
-        "asideDer"
-    }
-    .asideIzq {
-        grid-area: asideIzq;
-        width: 320px;
-        height: 200;
-        display: flex;
-        flex-direction: column;
-        align-content: center;    
-}
-.aboutStory {
-    width: 320px;
-    height: 75px;
-}
-.aboutStory h1 {
-    font-size: 10px;
-}
-
-.aboutparrafo {
-    width: 300px;
-    height: 200px;  
-}
-
-.aboutparrafo p {
-    font-size: 18px; 
-
-}
-
-.asideDer {
-    width: 320px;
-    display: grid;
-    grid-area: asideDer;
-    grid-template-columns: 1rf;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: 
-    " img"
-    " img"
-    " img"
-    " img"
-}
-
-.aboutMe img {
-    margin-right:0px;
-   width: 210px;
-   height: 100px;
-
-}
-.bancoImg:nth-of-type(1){
-    grid-row: 1/2;
-    grid-area: img;
-
-}
-
-.bancoImg:nth-of-type(2){
-    grid-row: 2/3;
-    grid-area: img;
-}
-
-.bancoImg:nth-of-type(3){
-    grid-row: 3/4;
-    grid-area: img;
-}
-
-.bancoImg:nth-of-type(4){
-    grid-row: 4/5;
-    grid-area: img;
-
-}
-
-.aboutMe img {
-    margin-right:0px;
-   width: 210px;
-   height: 100px; }
-}
-/* fin mobile */
 
  .asideIzq {
     grid-area: asideIzq;
@@ -579,18 +367,225 @@ textarea {
    
 }
 
-@media screen and (max-width: 480px) {
+/* inicio  mobile */
 
-#bodycompleto { 
-   
+@media screen and (max-width: 600px) {
+
+    #bodycompleto{ 
+        height: 480px;
+        display: grid;
+        grid-template-rows: 1fr 2fr 1fr;
+        grid-template-areas: 
+"header"
+"main"
+"footer"
+
+    }
+
+    #backgroundMobileOnly {
+        background-image: url("./images/averie-woodard-5d20kdvFCfA-unsplash.jpg");
+   background-size: cover;
+   z-index: 1;
+
+    }
+
+  .elementosCabecera {
+        display: flex;
+        grid-area: header;
+        height: 400px;
+        width: 300px;
+        flex-direction: column;
+        justify-content: center, space-evenly;
+    }
+
+    .divlogo img{ 
+        width: 60px;
+        height: 42px;
+        margin-left: 0px;
+        margin-top: 5px;
+       display: flex;
+        grid-area: header;
+        justify-content: flex-start;
+
+    }
+
+    #barraNav {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+    }
+
+    #barraNav li a{
+   display: flex;
+    flex-direction: column;
+        text-align: center;
+        padding: 8px 7px 8px 7px;
+        border: none;
+    }
+
+    #barraNav li a:hover{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: 8px 7px 8px 7px;
+        background-color:  #ccc;
+        border-radius: 5px;
+        color: black;
+    }
+main {
+grid-area: main;
+ width: 320px;
+ height: 470px;
+}
+
+.fotoPrincipal img{
+    width: 100%;
+}
+    .tituloImagenPrincipal {
+       font-size: 15px;
+       position: absolute;
+       margin-inline-start: 80px;
+    }
+     
+    .design {
+        margin-inline: 100px;
+    }   
+
+    /* footer mobile*/
+
+    footer {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        width: 320px;
+        height: 40px;
+        grid-template-areas: 
+        "redesicons"
+        "contactoGral"
+        }
+
+      .footerElementos{
+        display: flex;
+        flex-direction: column;
+        justify-content: center,space-around;
+      }
+
+      .redesicons {
+      grid-area: footer;
+display: flex;
+justify-content: center;
+
+      }
+      .redesicons a img {
+        width: 30px;
+        height: 30px;
+        margin: 3px;
+        border-radius: 10px;
+        list-style: none;
+      }
+
+      .contactoGral{
+        grid-area: footer;  
+        display: flex;
+        justify-content: center;
+      }
+      
+      .contactoGral p {
+        font-family: "Basquerville", "arial";
+        color:  blanchedalmond;
+        font-size: 10px;
+        margin-left: 50px;
+
+      }
+/* page about me mobile */
+
+    .aboutMe {
+        width: 320px;
+        height: 420px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+        "asideIzq"
+        "asideDer"
+    }
+    .asideIzq {
+        grid-area: asideIzq;
+        width: 320px;
+        height: 200;
+        display: flex;
+        flex-direction: column;
+        align-content: center;    
+}
+.aboutStory {
+    width: 320px;
+    height: 75px;
+}
+.aboutStory h1 {
+    font-size: 10px;
+}
+
+.aboutparrafo {
+    width: 300px;
+    height: 200px;  
+}
+
+.aboutparrafo p {
+    font-size: 18px; 
+
+}
+
+.asideDer {
+    width: 320px;
+    display: grid;
+    grid-area: asideDer;
+    grid-template-columns: 1rf;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: 
+    " img"
+    " img"
+    " img"
+    " img"
+}
+
+.aboutMe img {
+    margin-right:0px;
+   width: 210px;
+   height: 100px;
+
+}
+.bancoImg:nth-of-type(1){
+    grid-row: 1/2;
+    grid-area: img;
+
+}
+
+.bancoImg:nth-of-type(2){
+    grid-row: 2/3;
+    grid-area: img;
+}
+
+.bancoImg:nth-of-type(3){
+    grid-row: 3/4;
+    grid-area: img;
+}
+
+.bancoImg:nth-of-type(4){
+    grid-row: 4/5;
+    grid-area: img;
+
+}
+
+.aboutMe img {
+    margin-right:0px;
+   width: 210px;
+   height: 100px; }
+}
+/* fin mobile */
 
 
-
-
- 
-
-    
-}   
 
 
 
@@ -598,7 +593,7 @@ textarea {
         
 
 
-}
+
    
 
 
