--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ grid-template-areas:
     font-style: bold;
     font-size: 50px;
     color: blanchedalmond;
+    align-items: flex-start;
 }
 
 .aboutparrafo {
@@ -402,7 +403,7 @@ textarea {
     }
 
     #barraNav li a{
-   display: flex;
+    display: flex;
     flex-direction: column;
         text-align: center;
         justify-content: center;
@@ -410,6 +411,7 @@ textarea {
     }
 
     #barraNav li a:hover{
+        display: flex;
         flex-direction: column;
         text-align: center;
         background-color:  #ccc;
@@ -439,7 +441,6 @@ grid-area: main;
     footer {
         display: grid;
         grid-template-rows: repeat(2, 1fr);
-        width: 320px;
         height: 40px;
         grid-template-areas: 
         "redesicons"
@@ -493,7 +494,7 @@ justify-content: center;
     .asideIzq {
         grid-area: asideIzq;
         width: 100%;
-        height: 200;
+        height: 50%;
         display: flex;
         flex-direction: column;
         align-content: center;    
@@ -506,12 +507,13 @@ justify-content: center;
 }
 
 .aboutparrafo {
-    height: 100px; 
+    height: 80px; 
     font-size: 18px;  
 }
 
 .asideDer {
     display: grid;
+
     grid-area: asideDer;
     grid-template-rows: repeat(4, 1fr);
     grid-template-areas: 
@@ -520,9 +522,15 @@ justify-content: center;
     " img"
     " img"
 }
+.asideDer picture {
+    display: flex;
+    justify-content: center;
+}
+
 .bancoImg:nth-of-type(1){
     grid-row: 1/2;
     grid-area: img;
+    
 }
 .bancoImg:nth-of-type(2){
     grid-row: 2/3;
@@ -538,10 +546,20 @@ justify-content: center;
 }
 
 .aboutMe img {
-    margin-right:0px;
    width: 300px;
-   height: 150px; }
+   height: 150px;
+
 }
+
+/* gallery Mobile*/
+
+.gallery {
+    display: flex;
+    flex-direction: column;
+}
+
+}
+
 /* fin mobile */
 
 
