--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header {
 main { 
     grid-area: main;
 margin:auto;
-max-width: 1235px;
+max-width: 1230px;
 padding-left: 0px;}
 
 .fotoPrincipal{
@@ -103,6 +103,7 @@ margin-left: 0px;
 .tituloImagenPrincipal h1 {
     margin-left: 0px;
     margin-right: 120px;
+    
 }
 
 .design h1{
@@ -182,6 +183,7 @@ margin-left: 800px;
     cursor: pointer; 
 } 
     
+/* services page */
 
 .servicesBody {
     color: blanchedalmond;
@@ -192,10 +194,10 @@ margin-left: 800px;
 }
 
 .textoServices{
-    font-family: "Basquerville", "arial";
+  font-family: "Basquerville", "arial";
     font-style: bold;
-    font-size: 70px;
     color: blanchedalmond;
+    font-size: 70px; 
     display: flex;
     justify-items: flex-start;
     padding: 5px 5px 5px 5px;
@@ -421,6 +423,7 @@ textarea {
 
 main {
 grid-area: main;
+justify-content: center;
 }
 
 .fotoPrincipal img{
@@ -501,14 +504,14 @@ justify-content: center;
 }
 .aboutStory {
     height: 40px;
-    font-size: 30px;
+    font-size: 3em;
     display: flex;
     align-content: flex-start;
 }
 
 .aboutparrafo {
     height: 80px; 
-    font-size: 18px;  
+    font-size: 1.5em;  
 }
 
 .asideDer {
@@ -551,14 +554,78 @@ justify-content: center;
 
 }
 
-/* gallery Mobile*/
+/* gallery mobile*/
 
 .gallery {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+}
+
+.gallery img {
+    width: 30em;
+    height: 15em;
+    justify-content: center;
+}
+
+/* Services mobile page*/
+
+.servicesBody {
+    color: blanchedalmond;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 520px;
+
+}
+
+.textoServices {
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+}
+
+.ServicesBody iframe {
+    display: flex;
+    justify-items: center;
+    margin-left: 35px;
+
+}
+
+.contactMain {
+    max-width: 520px;
+    height: 480px;
+   
+}
+
+.contactTitulo {
+    font-size: 50px;
+}
+.ContactForm {
+    font-family: "Basquerville", "arial";
+    font-style: bold;
+    font-size: 1em;
+    color: blanchedalmond;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: 
+    "formularioIzq"
+    "formularioDerecho";
+}
+.formularioIzq {
+    grid-area: formularioIzq;
+    height: 200px;
+
+}
+
+.formularioDerecho {
+    grid-area: formularioDerecho;
+
 }
 
 }
+
+
 
 /* fin mobile */
 
