--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ margin-left: 800px;
 
 }
 
-.ServicesBody iframe {
+.servicesBody iframe {
     display: flex;
     justify-items: center;
     margin-left: 35px;
@@ -585,16 +585,19 @@ justify-content: center;
     justify-content: center;
 }
 
-.ServicesBody iframe {
+.servicesBody iframe {
     display: flex;
     justify-items: center;
-    margin-left: 35px;
+    width: 520px;
 
 }
 
+
+
+/* Contact mobile page*/
+
 .contactMain {
     max-width: 520px;
-    height: 480px;
    
 }
 
