--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ header {
 }
 
 #barraNav {
-    padding-top: 20px;
-    padding-bottom: 10px;
+   /* padding-top: 20px;
+    padding-bottom: 10px;*/
+    padding: 1em;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -45,7 +46,8 @@ header {
     font-weight: bold;
     display: inline;
     text-align: left;
-    padding: 8px 7px 8px 7px;
+   /* padding: 8px 7px 8px 7px;*/
+   padding: 0.2em;
     border: none;
     
 }
@@ -56,7 +58,7 @@ header {
     font-weight: bold;
     display: inline;
     text-align: left;
-    padding: 8px 7px 8px 7px;
+  padding: 8px 7px 8px 7px;
     border: 1px solid #ccc;
 }
 
@@ -73,8 +75,8 @@ header {
 }
 
 main { 
-    grid-area: main;
-margin:auto;
+grid-area: main;
+margin: 0px;
 max-width: 1230px;
 padding-left: 0px;}
 
@@ -103,6 +105,7 @@ margin-left: 0px;
 .tituloImagenPrincipal h1 {
     margin-left: 0px;
     margin-right: 120px;
+    row-gap: 0.1em;
     
 }
 
@@ -369,7 +372,8 @@ textarea {
 @media screen and (max-width: 600px) {
 
     #bodycompleto{ 
-        height: 480px;
+        height: 620px;
+        width: 410px;
         display: grid;
         grid-template-rows: 1fr 2fr 1fr;
         grid-template-areas: 
@@ -386,10 +390,16 @@ textarea {
 
     }
 
+    header {
+        width: 420px;
+        height: 1em;
+    }
+
   .elementosCabecera {
         display: flex;
         grid-area: header;
-        height: 400px;
+        height: 100%;
+        width: 100%;
         flex-wrap: wrap-reverse;
         justify-content: center;
     }
@@ -397,9 +407,11 @@ textarea {
     .divlogo img{ 
         width: 60px;
         height: 42px;
+        width: 8em;
+        height: 8em;
         position:absolute;
-        margin-left: 0px;
-        margin-top: 5px;
+        margin: 1em;
+        display: flex;
         justify-content: flex-start;
 
     }
@@ -410,6 +422,7 @@ textarea {
         text-align: center;
         justify-content: center;
         border: none;
+        padding: 0.1em;
     }
 
     #barraNav li a:hover{
@@ -419,18 +432,25 @@ textarea {
         background-color:  #ccc;
         border-radius: 5px;
         color: black;
+        padding: 0.1em;
     }
 
 main {
 grid-area: main;
 justify-content: center;
+padding: 1em;
+width: 400px;
 }
 
 .fotoPrincipal img{
     width: 100%;
+    height: 100%;
 }
     .tituloImagenPrincipal {
-       font-size: 15px;
+       display: flex;
+        flex-wrap: wrap;
+        gap: 0.1em;
+       font-size: 1em;
        position: absolute;
        margin-inline-start: 80px;
     }
@@ -563,8 +583,8 @@ justify-content: center;
 }
 
 .gallery img {
-    width: 30em;
-    height: 15em;
+    width: 100%;
+    height: 100%;
     justify-content: center;
 }
 
