--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ header {
 }
 
 #barraNav {
-   /* padding-top: 20px;
-    padding-bottom: 10px;*/
+
     padding: 1em;
     display: flex;
     flex-wrap: nowrap;
@@ -46,7 +45,6 @@ header {
     font-weight: bold;
     display: inline;
     text-align: left;
-   /* padding: 8px 7px 8px 7px;*/
    padding: 0.2em;
     border: none;
     
@@ -139,6 +137,7 @@ display: flex;
 flex-wrap: nowrap;
 flex-direction: row;
 list-style: none;
+gap: 1em;
 }
 
 .redesicons a img {
@@ -200,19 +199,16 @@ margin-left: 800px;
   font-family: "Basquerville", "arial";
     font-style: bold;
     color: blanchedalmond;
-    font-size: 70px; 
+    font-size: 3em; 
     display: flex;
     justify-items: flex-start;
-    padding: 5px 5px 5px 5px;
-    margin-left: 30px;
-    margin-bottom: 0px;
 
 }
 
 .servicesBody iframe {
     display: flex;
     justify-items: center;
-    margin-left: 35px;
+    padding: 1em;
 
 }
 
@@ -373,7 +369,7 @@ textarea {
 
     #bodycompleto{ 
         height: 620px;
-        width: 410px;
+        width: 520px;
         display: grid;
         grid-template-rows: 1fr 2fr 1fr;
         grid-template-areas: 
@@ -391,8 +387,8 @@ textarea {
     }
 
     header {
-        width: 420px;
-        height: 1em;
+        width: 520px;
+        height: 350px;
     }
 
   .elementosCabecera {
@@ -443,7 +439,6 @@ width: 400px;
 }
 
 .fotoPrincipal img{
-    width: 100%;
     height: 100%;
 }
     .tituloImagenPrincipal {
@@ -480,6 +475,7 @@ width: 400px;
       grid-area: footer;
 display: flex;
 justify-content: center;
+gap: 1em;
 
       }
       .redesicons a img {
@@ -530,13 +526,13 @@ justify-content: center;
 }
 
 .aboutparrafo {
-    height: 80px; 
+    height: 1em; 
     font-size: 1.5em;  
 }
 
 .asideDer {
     display: grid;
-
+    height: 50%;
     grid-area: asideDer;
     grid-template-rows: repeat(4, 1fr);
     grid-template-areas: 
@@ -558,19 +554,16 @@ justify-content: center;
 .bancoImg:nth-of-type(2){
     grid-row: 2/3;
     grid-area: img;
+
 }
 .bancoImg:nth-of-type(3){
     grid-row: 3/4;
     grid-area: img;
+  
 }
 .bancoImg:nth-of-type(4){
     grid-row: 4/5;
     grid-area: img;
-}
-
-.aboutMe img {
-   width: 300px;
-   height: 150px;
 
 }
 
@@ -607,8 +600,11 @@ justify-content: center;
 
 .servicesBody iframe {
     display: flex;
+    justify-content: center;
     justify-items: center;
     width: 520px;
+    height: 420px;
+    padding: 1em;
 
 }
 
@@ -617,7 +613,7 @@ justify-content: center;
 /* Contact mobile page*/
 
 .contactMain {
-    max-width: 520px;
+   width: 450px;
    
 }
 
@@ -628,6 +624,7 @@ justify-content: center;
     font-family: "Basquerville", "arial";
     font-style: bold;
     font-size: 1em;
+    width: 510px;
     color: blanchedalmond;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
@@ -638,12 +635,13 @@ justify-content: center;
 .formularioIzq {
     grid-area: formularioIzq;
     height: 200px;
+    max-width: 500px;
 
 }
 
 .formularioDerecho {
     grid-area: formularioDerecho;
-
+    max-width: 500px;
 }
 
 }
