--- a/style.css
+++ b/style.css
@@ -45,9 +45,11 @@ header {
     font-weight: bold;
     display: inline;
     text-align: left;
+    font-size: 20px;
    padding: 0.2em;
     border: none;
-    
+    transition: padding 0.5s; font-size: medium 0.5s;
+
 }
 
 #barraNav li a:hover{
@@ -56,9 +58,14 @@ header {
     font-weight: bold;
     display: inline;
     text-align: left;
-  padding: 8px 7px 8px 7px;
+  /*padding: 8px 7px 8px 7px;*/
     border: 1px solid #ccc;
+    padding: 0.8em;
+    font-size: 1.5em;
+
+        
 }
+
 
 #barraNav li{
     font-style: normal;
@@ -71,6 +78,7 @@ header {
     display:inline;
 
 }
+
 
 main { 
 grid-area: main;
@@ -129,7 +137,8 @@ grid-template-areas:
   display: flex;
   flex-direction: row;
  justify-content: space-between;
-  }
+height: 100px;  
+}
 
 .redesicons {
 grid-area: footer;
@@ -138,6 +147,7 @@ flex-wrap: nowrap;
 flex-direction: row;
 list-style: none;
 gap: 1em;
+transform: translateX(10px);
 }
 
 .redesicons a img {
@@ -148,17 +158,26 @@ gap: 1em;
     list-style: none;
 }
 
+.redesicons :hover {
+    transform: translateX(200px);
+}
+
 .contactoGral {
     grid-area: footer;
     display: flex;
+    height: 120px;
+    max-width: 100%;
+    max-height: 100px;
+    margin-left: 760px;
+    padding: 1em;
+    
 
 }
 
 .contactoGral p {
     font-family: "Basquerville", "arial";
     color:  blanchedalmond;
-    font-size: 20px;
-margin-left: 800px;
+    font-size: 14px;
 
 
 }    
@@ -295,11 +314,17 @@ grid-template-areas:
     margin-left: 40px;
 }
 
+.contactMain {margin: 1.5em;
+width: 100%;}
+
 .ContactForm {
     font-family: "Basquerville", "arial";
     font-style: bold;
     font-size: 20px;
     color: blanchedalmond;
+    background-image: linear-gradient(to left, rgb(227, 118, 34),#914a56,#ac273d, #4d0511);
+    padding: 1em;
+    border-radius: 15px;
     margin-left: 5px;
     display: grid;
     grid-template-columns: repeat(2, 2fr);
